display two boards

--- a/src/components/game/Board.css
+++ b/src/components/game/Board.css
@@ -1,11 +1,11 @@
 .Board1 {
   display: flex;
   width: auto;
-  margin: 5px auto;
+  margin: 50px 25px;
 }
 
 .Board2 {
   display: flex;
   width: auto;
-  margin: 5px auto;
+  margin: 50px 25px;
 }
