--- a/src/components/game/Square.css
+++ b/src/components/game/Square.css
@@ -1,14 +1,15 @@
 .Square {
   flex: 1;
-  min-width: 89px;
-  max-width: 89px;
-  min-height: 89px;
-  max-height: 89px;
-  border: 2.5px solid #eee;
-  background-color: blue;
+  min-width: 35px;
+  max-width: 35px;
+  min-height: 35px;
+  max-height: 35px;
+  border: 1px solid #eee;
+  background-color:  #009999
+;
 }
 
 .Square:hover {
   cursor: pointer;
-  background-color: lightblue;
+  background-color: #004d4d;
 }
