--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@
 
 .App-header {
   background-image: url('./wave.jpg');
-  background-size: cover;
-  height: 200px;
+  background-size: contain;
+  height: 170px;
   padding: 20px;
   color: white;
   font-size: 2.5em;
