--- a/src/components/game/Board.css
+++ b/src/components/game/Board.css
@@ -1,12 +1,10 @@
-.Board1 {
+.Board {
   display: flex;
+  flex-direction: column;
   width: auto;
   margin: 60px 30px;
 }
 
 .Board2 {
   display: flex;
-  width: auto;
-  margin: 60px 30px;
-  /* visibility: hidden; */
 }
