--- a/src/components/game/Board.css
+++ b/src/components/game/Board.css
@@ -1,10 +1,10 @@
-.Board {
+.MainBoard {
   display: flex;
   flex-direction: column;
   width: auto;
   margin: 60px 30px;
 }
 
-.Board2 {
+.row {
   display: flex;
 }
