Add a class that changes according to value and put some CSS

--- a/src/components/game/Square.css
+++ b/src/components/game/Square.css
@@ -7,3 +7,23 @@
   border: 1px solid #eee;
   background-color:  #009999;
 }
+
+.value-5 {
+  background-color: #0000ff;
+}
+
+.value-4 {
+  background-color: #000033;
+}
+
+.value-3 {
+  background-color: #0d0d0d;
+}
+
+.value-2 {
+  background-color: #595959;
+}
+
+.value-1 {
+  background-color: #b3b3b3;
+}
