add back to game overview button on ship placing side

--- a/src/components/ships/LockButton.css
+++ b/src/components/ships/LockButton.css
@@ -1,16 +1,15 @@
-.Button {
+.lock {
   background-color: #4da6ff;
-  border-radius: 5px;
   padding: 10px;
   margin-bottom: 20px;
-  font-size: 1.2em;
-  font-weight: bold;
-  width: 160px;
-  height: 50px;
+  margin-left: 50px;
+  font-size: 1em;
+  width: 170px;
+  height: auto;
   color: white;
 }
 
-.Button:hover {
+.lock:hover {
   background-color: #009999;
   cursor: pointer;
 }
